Changing personal information

--- a/feeds/templates/home_page.html
+++ b/feeds/templates/home_page.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>J A M E S &nbsp; W A W E R U</title>
+    <title>A N D R É S &nbsp; Y A N Q U ÉN</title>
     <link rel="icon" href="{% static 'images/logo-icon.png' %}">
     <link rel="icon" href="/Assets/img/15.jpg">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -34,7 +34,7 @@
 
             <div class="navi">
                 <div class="col-xl-9 d-flex align-items-center lefty">
-                    <h1 class="logo mr-auto"><a href="#">James Waweru</a></h1>
+                    <h1 class="logo mr-auto"><a href="#">Andrés Yanquén</a></h1>
 
                     <nav class="nav-menu d-none d-lg-block float-right">
                         <ul>
@@ -70,10 +70,8 @@
                         <p> <span id="big"></span>{{infor.mini_about}}</p>
 
                         <div class="social">
-                            <a href="{{infor.instagram}}"> <i class="fa fa-instagram"></i></a>
 
                             <a href="{{infor.twitter}}"> <i class="fa fa-twitter"></i></a>
-                            <a href="{{infor.facebook}}"><i class="fa fa-facebook-f" style="background: #4974c5 "></i>
                            </a>
                             <a href="{{infor.github}}"><i class="fa fa-github"></i>
                             </a>
@@ -130,13 +128,31 @@
                                 <p>Reactjs</p>
                             </div>
                             <div>
+                                <ion-icon name="logo-vue" style="color: green;font-size:35px"></ion-icon>
+                                </i>
+                                <p>Vue js</p>
+                            </div>
+                            <div>
+                                <ion-icon name="logo-nodejs" style="color: green;font-size:35px"></ion-icon>
+                                </i>
+                                <p>Node js</p>
+                            </div>
+                            <div>
                                 <ion-icon name="logo-python" style="color: #38a4ec;font-size:35px"></ion-icon>
                                 <p>Python</p>
                             </div>
-
-                            <div> <i class="fa fa-database"></i>
-                                <p>sql-database</p>
+                            <div>
+                                <img name="logo-java" style="margin-top: 0px; width: 37px; height: 37px;" src="../../static/images/java.png" style="color: #b0ec38;font-size:35px">
+                                <p>Java</p>
                             </div>
+                            <div> <i class="fa fa-database"></i>
+                                <p>Sql-databases</p>
+                            </div>
+                            <div>
+                                <ion-icon name="logo-firebase" style="color: #38a4ec;font-size:35px"></ion-icon>
+                                <p>No-sql databases</p>
+                            </div>
+                            
 
                         </div>
 
@@ -160,8 +176,8 @@
                             <div class="all-bars">
                                 <div class="bars aos-init" data-aos="zoom-in" data-aos-delay="800">
                                     <div class="bar-info">
-                                        <p>Frondend</p>
-                                        <h5>70%</h5>
+                                        <p>Frontend</p>
+                                        <h5>80%</h5>
                                     </div>
                                     <div class="bar">
                                         <p id="one"></p>
@@ -176,10 +192,10 @@
                                         <p id="two"></p>
                                     </div>
                                 </div>
-                                <div class="bars aos-init" data-aos="zoom-in" data-aos-delay="300">
+                                <div class="bars aos-init" data-aos="zoom-in" data-aos-delay="150">
                                     <div class="bar-info">
                                         <p>Javascript</p>
-                                        <h5>65%</h5>
+                                        <h5>85%</h5>
                                     </div>
                                     <div class="bar">
                                         <p id="three"></p>
@@ -187,38 +203,74 @@
                                 </div>
                                 <div class="bars aos-init" data-aos="zoom-in" data-aos-delay="400">
                                     <div class="bar-info">
-                                        <p>python</p>
+                                        <p>Python</p>
                                         <h5>60%</h5>
                                     </div>
                                     <div class="bar">
                                         <p id="four"></p>
                                     </div>
                                 </div>
-                                <div class="bars aos-init" data-aos="zoom-in" data-aos-delay="500">
+                                <div class="bars aos-init" data-aos="zoom-in" data-aos-delay="400">
                                     <div class="bar-info">
                                         <p>React</p>
-                                        <h5>40%</h5>
+                                        <h5>60%</h5>
+                                    </div>
+                                    <div class="bar">
+                                        <p id="five"></p>
+                                    </div>
+                                </div>
+                                <div class="bars aos-init" data-aos="zoom-in" data-aos-delay="250">
+                                    <div class="bar-info">
+                                        <p>Vue</p>
+                                        <h5>75%</h5>
                                     </div>
                                     <div class="bar">
                                         <p id="six"></p>
                                     </div>
                                 </div>
-                                <div class="bars aos-init" data-aos="zoom-in" data-aos-delay="600">
+                                <div class="bars aos-init" data-aos="zoom-in" data-aos-delay="250">
                                     <div class="bar-info">
                                         <p>Django</p>
-                                        <h5>75%</h5>
+                                        <h5>60%</h5>
                                     </div>
                                     <div class="bar">
                                         <p id="seven"></p>
                                     </div>
                                 </div>
-                                <div class="bars aos-init" data-aos="zoom-in" data-aos-delay="700">
+                                <div class="bars aos-init" data-aos="zoom-in" data-aos-delay="250">
                                     <div class="bar-info">
-                                        <p>sql-database</p>
+                                        <p>Node JS</p>
+                                        <h5>60%</h5>
+                                    </div>
+                                    <div class="bar">
+                                        <p id="eight"></p>
+                                    </div>
+                                </div>
+                                <div class="bars aos-init" data-aos="zoom-in" data-aos-delay="250">
+                                    <div class="bar-info">
+                                        <p>SQL databases</p>
                                         <h5>55%</h5>
                                     </div>
                                     <div class="bar">
-                                        <p id="five"></p>
+                                        <p id="nine"></p>
+                                    </div>
+                                </div>
+                                <div class="bars aos-init" data-aos="zoom-in" data-aos-delay="250">
+                                    <div class="bar-info">
+                                        <p>No SQL Databases</p>
+                                        <h5>40%</h5>
+                                    </div>
+                                    <div class="bar">
+                                        <p id="ten"></p>
+                                    </div>
+                                </div>
+                                <div class="bars aos-init" data-aos="zoom-in" data-aos-delay="250">
+                                    <div class="bar-info">
+                                        <p>Java</p>
+                                        <h5>40%</h5>
+                                    </div>
+                                    <div class="bar">
+                                        <p id="eleven"></p>
                                     </div>
                                 </div>
                             </div>
@@ -295,12 +347,10 @@
                                 <i class="fa fa-share-square-o"> <span id="io">Social networks</span> </i>
                             </div>
                             <h4>
-                                <a href="{{infor.instagram}}" class="m1"> <i class="icofont-instagram"></i></a>
 
-                                  <a href="{{infor.twitter}}" class="m1"> <i class="icofont-twitter"></i></a>
+                                  <a href="{{infor.twitter}}" class="m1"> <i class="fa fa-twitter"></i></a>
                                 <a href="{{infor.github}}"><i class="fa fa-github"></i>
                                 </a>
-                                <a href="{{infor.facebook}}"><i class="fa fa-facebook" style="background: #4974c5"></i></a>
                             </h4>
 
                         </div>
@@ -312,12 +362,7 @@
                 </div>
                 <div class="footing ">
                     <div class="row justify-content-center ">
-                        <div class="col-md-4 ">
-                            <p>Designed By </p>
-                            <p>James Waweru</p>
-                            <p>A Full Web Developer</p>
-                            <p id="copy ">© COPYRIGHTS FOLIO. ALL RIGHTS RESERVED.
-                        </div>
+
                     </div>
                     </p>
                 </div>
